# uhttp-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: micropython.yml  tests.yml
examples/: client_async.py  client_basic.py  client_https.py
tests/: test_async.py  test_auth.py  test_basic.py  test_cli.py  test_cookies.py  test_errors.py  test_integration.py  test_keepalive.py  test_mpy_integration.py  test_nonblocking_connect.py  test_unit.py
uhttp/: __init__.py  cli.py  client.py
