[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uhttp-client"
version = "2.2.1"
description = "Micro HTTP client for Python and MicroPython"
readme = "README.md"
authors = [
    {name = "Pavel Revak", email = "pavelrevak@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pavelrevak/uhttp-client"
Repository = "https://github.com/pavelrevak/uhttp-client"

[project.scripts]
uhttp = "uhttp.cli:main"

[tool.setuptools.packages.find]
include = ["uhttp*"]
